src/objects/Community_Group_Control_Tag__c.object
<CustomObject>
    <description>This object allows tags to be associated with a Group Control record.</description>
    <fields>
        <fullName>Community_Tag__c</fullName>
        <description>This defines the Tag that is being associated to the Group Control</description>
        <label>Community Tag</label>
        <referenceTo>Community_Tag__c</referenceTo>
        <relationshipLabel>Group Items Tagged</relationshipLabel>
        <relationshipName>Community_GroupItems_Tagged</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Group_Control__c</fullName>
        <description>This field defines the Group that tags will be associated with</description>
        <label>Group Control</label>
        <referenceTo>Community_Group_Control__c</referenceTo>
        <relationshipLabel>Group Tags</relationshipLabel>
        <relationshipName>Community_Group_Tags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Group_Discoverable__c</fullName>
        <description>Indicates if the related Group item is discoverable to all Community User&apos;s.</description>
        <formula>Group_Control__r.Discoverable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the related Group item is discoverable to all Community User&apos;s.</inlineHelpText>
        <label>Group Discoverable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Status__c</fullName>
        <description>Represents the Status of the related Group item.</description>
        <formula>TEXT( Group_Control__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of the related Group item.</inlineHelpText>
        <label>Group Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Tag_SF_ID__c</fullName>
        <description>Represents the 18 digit unique Salesforce ID.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the 18 digit unique Salesforce ID.</inlineHelpText>
        <label>Group Tag SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <description>Represents the Group Type of the related Group item.</description>
        <formula>TEXT( Group_Control__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Title of the related Group.</inlineHelpText>
        <label>Group Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <description>Represents the Name of the Theme related to the Tag.</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;&quot;Community_Tag__r.Community_Theme__r.Id&quot;,  Community_Tag__r.Community_Theme__r.Name  ,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the Name of the Theme related to the Tag.</inlineHelpText>
        <label>Theme</label>
        <type>Text</type>
    </fields>
    <label>Community Group Control Tag</label>
    <nameField>
        <displayFormat>CGCT-{yy}{mm}{0}</displayFormat>
        <label>Community Group Control Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Group Control Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>